--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-server",
+  "name": "skillbranch-lesson.repeat-3",
   "version": "0.0.0",
   "description": "",
   "main": "index.js",
